--- a/CameraEmguCV/App.xaml
+++ b/CameraEmguCV/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="CameraApp.App"
+﻿<Application x:Class="CameraEmguCV.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CameraApp"
+             xmlns:local="clr-namespace:CameraEmguCV"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
