--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CameraEmguCV"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="MainWindow" Height="532" Width="955" Loaded="Window_Loaded">
     <Grid>
-        <Canvas Name="mainCanvas" Margin="0,0,401.6,132" Panel.ZIndex="1" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseLeftButtonUp="MainCanvas_MouseUp">
-            <Image Name="image1" Stretch="Fill"  Height="288" Width="392" Panel.ZIndex="0"/>
+        <Canvas Name="mainCanvas" Margin="0,0,562.8,178.4" Panel.ZIndex="1" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseLeftButtonUp="MainCanvas_MouseUp">
+            <Image Name="image1" Stretch="Fill"  Height="324" Width="386" Panel.ZIndex="0"/>
         </Canvas>
-        <Image Name="image2" Stretch="Fill" Height="300" Width="300" Margin="454,10,39.6,110"/>
+        <Image Name="image2" Stretch="Uniform" Margin="482,10,9.8,154.4"/>
         <Button Name="btnShowImage" Content="Show image" Height="40" Width="100" Margin="513,330,180.6,50" Click="BtnShowImage_Click" />
-        <Button Name="btnWarp" Content="Warp perspective" Height="40" Margin="618,330,63.6,50" Click="BtnWarp_Click" />
+        <Button Name="btnWarp" Content="Warp perspective" Margin="708,371,114.8,91.4" Click="BtnWarp_Click" />
         <Button Name="btnHough" Content="Show hough lines" Height="40" Width="100" Margin="513,375,180.6,5" Click="BtnHough_Click"/>
     </Grid>
 </Window>
