--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CameraEmguCV"
         mc:Ignorable="d"
-        Title="MainWindow" Height="659.2" Width="955" Loaded="Window_Loaded">
+        Title="MainWindow" Height="659.2" Width="1167.4" Loaded="Window_Loaded">
     <Grid Height="613" Margin="0,0,-0.2,0" VerticalAlignment="Top">
-        <Canvas Name="mainCanvas" Margin="0,0,562.8,178.4" Panel.ZIndex="1" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseLeftButtonUp="MainCanvas_MouseUp">
-            <Image Name="image1" Stretch="Fill"  Height="324" Width="386" Panel.ZIndex="0"/>
+        <Canvas Name="mainCanvas" Panel.ZIndex="1"  RenderTransformOrigin="0,0" HorizontalAlignment="Left" Width="640" Height="360" VerticalAlignment="Top">
+            <Image Name="image1"  Height="360" Width="640" Panel.ZIndex="0" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown"  RenderTransformOrigin="0,0"/>
         </Canvas>
-        <Image Name="image2" Stretch="Uniform" Margin="482,10,9.8,154.4"/>
-        <Button Name="btnShowImage" Content="Show image" Height="40" Width="100" Margin="513,330,180.6,50" Click="BtnShowImage_Click" />
-        <Button Name="btnWarp" Content="Warp perspective" Margin="708,426,115,147" Click="BtnWarp_Click" />
-        <Button Name="btnHough" Content="Show hough lines" Height="40" Width="100" Margin="513,375,180.6,5" Click="BtnHough_Click"/>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="708,471,115,102" Click="BtnAddMarkers_Click"/>
+        <Image Name="image2" Stretch="Uniform" Margin="697,10,10,275"/>
+        <Button Name="btnShowImage" Content="Show image" Height="40" Margin="697,426,322,147" Click="BtnShowImage_Click" />
+        <Button Name="btnWarp" Content="Warp perspective" Margin="902,426,115,147" Click="BtnWarp_Click" />
+        <Button Name="btnHough" Content="Show hough lines" Height="40" Margin="697,471,322,102" Click="BtnHough_Click"/>
+        <Button Name="btnAddMarkers" Content="Add Markers" Margin="902,471,115,102" Click="BtnAddMarkers_Click"/>
     </Grid>
 </Window>
