--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -5,16 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CameraEmguCV"
         mc:Ignorable="d"
-        Title="MainWindow" Height="659.2" Width="1167.4" Loaded="Window_Loaded">
-    <Grid Height="613" Margin="0,0,-0.2,0" VerticalAlignment="Top">
+        Title="MainWindow" Height="653.2" Width="1816.4" Loaded="Window_Loaded">
+    <Grid Height="643" Margin="10,0,-8,-21" VerticalAlignment="Top">
+
         <Canvas Name="mainCanvas" Panel.ZIndex="1"  RenderTransformOrigin="0,0" HorizontalAlignment="Left" Width="640" Height="360" VerticalAlignment="Top">
             <Image Name="image1"  Height="360" Width="640" Panel.ZIndex="0" MouseLeftButtonDown="MainCanvas_MouseLeftButtonDown" MouseRightButtonDown="MainCanvas_MouseRightButtonDown"  RenderTransformOrigin="0,0" Canvas.Top="2"/>
         </Canvas>
-        <Image Name="image2" Stretch="Uniform" Margin="697,10,10,275"/>
-        <Button Name="btnShowImage" Content="Show image" Height="40" Margin="697,426,322,147" Click="BtnShowImage_Click" />
-        <Button Name="btnWarp" Content="Warp perspective" Margin="902,426,115,147" Click="BtnWarp_Click" />
-        <Button Name="btnHough" Content="Show hough lines" Height="40" Margin="697,471,322,102" Click="BtnHough_Click"/>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="902,471,115,102" Click="BtnAddMarkers_Click"/>
-        <Button Name="btnReset" Content="RESET!" HorizontalAlignment="Left" Margin="697,516,0,0" VerticalAlignment="Top" Width="140" Height="36" Click="BtnReset_Click"/>
+
+        <Canvas Width="458" Height="324" Name="secondaryCanvas" Margin="710,10,638,309">
+            <Image Name="image2" Stretch="Uniform" Width="458" Height="324" MouseLeftButtonDown="SecondaryCanvas_MouseLeftButtonDown" />
+        </Canvas>
+
+        <Button Name="btnShowImage" Content="Show image" Margin="10,419,1421,176" Click="BtnShowImage_Click" />
+        <Button Name="btnWarp" Content="Warp perspective" Margin="265,419,1166,176" Click="BtnWarp_Click" />
+        <Button Name="btnHough" Content="Show hough lines" Margin="265,495,1166,100" Click="BtnHough_Click"/>
+        <Button Name="btnReset" Content="RESET!"  Margin="10,495,1421,100"   Click="BtnReset_Click"/>
+        <Button Name="btnAddMarkers" Content="Add Markers" Margin="497,419,961,176" Click="BtnAddMarkers_Click"/>
+
+        <Image HorizontalAlignment="Left" Height="102" Margin="1249,38,0,0" VerticalAlignment="Top" Width="516" Name="image3"/>
+        <Button Content="Test" HorizontalAlignment="Left" VerticalAlignment="Top" Width="348" Height="66" Margin="497,495,0,0" Name="btnTest" Click="BtnTest_Click"/>
     </Grid>
 </Window>
