--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -13,13 +13,13 @@
         </Canvas>
         <Canvas Width="458" Name="secondaryCanvas" Margin="757,10,684,538">
             <Image Name="image2" Stretch="Uniform" Width="458" Height="350" MouseLeftButtonDown="SecondaryCanvas_MouseLeftButtonDown" />
-        </Canvas> 
+        </Canvas>
         <Button Name="btnShowImage" Content="Show image" Margin="608,569,1010,275" Click="BtnShowImage_Click"/>
         <Button Name="btnWarp" Content="Warp perspective" Margin="936,566,682,275" Click="BtnWarp_Click" />
         <Button Name="btnHough" Content="Show hough lines" Margin="608,652,1010,190" Click="BtnHough_Click"/>
         <Button Name="btnAddMarkers" Content="Add Markers" Margin="608,738,1010,112" Click="BtnAddMarkers_Click"/>
         <Button Name="btnSingleLines" Content="SingleLines" Margin="936,652,682,190" Click="BtnSingleLines_Click"/>
-        <Button Name="btnReset" Content="RESET!"  Margin="608,817,1010,32"   Click="BtnReset_Click"/>
+        <Button Name="btnReset" Content="RESET!"  Margin="1249,566,369,283"   Click="BtnReset_Click"/>
         <Image HorizontalAlignment="Left" Height="102" Margin="1249,38,0,0" VerticalAlignment="Top" Width="516" Name="image3"/>
         <Button Content="Test" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Height="48" Margin="936,738,0,0" Name="btnTest" Click="BtnTest_Click"/>
         <DockPanel VerticalAlignment="Center" Margin="78,533,1350.2,78" Height="32">
@@ -52,5 +52,6 @@
             <TextBox Text="{Binding ElementName=slHoughThresh, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" TextAlignment="Right" Width="40"/>
             <Slider Maximum="100" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Name="slHoughThresh" ValueChanged="SlHoughThresh_ValueChanged"/>
         </DockPanel>
+        <TreeView HorizontalAlignment="Left" Height="317" Margin="1249,178,0,0" VerticalAlignment="Top" Width="472"/>
     </Grid>
 </Window>
