--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -15,16 +15,29 @@
             <Image Name="image2" Stretch="Uniform" Width="458" Height="350" />
         </Canvas>
         <Button Name="btnShowImage" Content="Show image" Margin="608,569,1010,275" Click="BtnShowImage_Click"/>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="608,738,1010,112" Click="BtnAddMarkers_Click"/>
+        <Button Name="btnAddMarkers" Content="Add Markers" Margin="608,657,1010,193" Click="BtnAddMarkers_Click"/>
         <Button Name="btnReset" Content="RESET!"  Margin="1249,566,369,283"   Click="BtnReset_Click"/>
         <Image HorizontalAlignment="Left" Height="102" Margin="1249,38,0,0" VerticalAlignment="Top" Width="516" Name="image3"/>
         <TreeView HorizontalAlignment="Left" Height="221" Margin="1249,286,0,0" VerticalAlignment="Top" Width="287" x:Name="tree">
-            <TreeViewItem x:Name="treeItem"/>
-            <TreeViewItem x:Name="treeItem2"/>
+            <TreeView.Resources>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding}">
+                                        
+                                    </TextBlock>
+                                </StackPanel>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TreeView.Resources>
         </TreeView>
         <ComboBox Name="cbxCameraDevices" HorizontalAlignment="Left" Margin="1297,746,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CbxCameraDevices_SelectionChanged"/>
         <Button x:Name="btnDebugWindow" Content="Debug Mode"  Margin="1249,656,369,193"   Click="btnDebugWindow_Click"/>
-        <Label Content="Template found: " HorizontalAlignment="Left" Margin="936,583,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,0.266"/>
-        <Label Name="lblFound" Content="" HorizontalAlignment="Left" Margin="1030,583,0,0" VerticalAlignment="Top" Height="26"/>
+        <Label Content="Template found: " HorizontalAlignment="Left" Margin="941,589,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,0.266"/>
+        <Label Name="lblFound" Content="" HorizontalAlignment="Left" Margin="1045,589,0,0" VerticalAlignment="Top" Height="26"/>
     </Grid>
 </Window>
