--- a/CameraEmguCV/CadranDefinition.xaml
+++ b/CameraEmguCV/CadranDefinition.xaml
@@ -5,9 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CameraEmguCV"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="Definire Cadran" Height="200" Width="400">
     <Grid>
-        <TextBox Text="Hei"  HorizontalAlignment="Left" Height="23" Margin="168,189,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173" TextChanged="TextBox_TextChanged"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="48*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Text="Hei"  HorizontalAlignment="Left" Height="24" Margin="10,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="103" TextChanged="TextBox_TextChanged" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Label Content="Denumire Cadran" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label Content="Tip Cadran" Grid.Column="2" HorizontalAlignment="Left" Margin="208,10,0,0" VerticalAlignment="Top" Width="101"/>
+        <ComboBox Grid.Column="2" HorizontalAlignment="Left" Margin="189,40,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Content="Numeric"></ComboBoxItem>
+            <ComboBoxItem Content="AlfaNumeric"></ComboBoxItem>
+        </ComboBox>
+        <Button x:Name="btn_Cancel" Content="Cancel" Grid.Column="2" HorizontalAlignment="Left" Margin="251,139,0,0" VerticalAlignment="Top" Width="75" Click="Btn_Cancel_Click"/>
+        <Button x:Name="btn_Accept" Content="Accept" Grid.Column="2" HorizontalAlignment="Left" Margin="172,139,0,0" VerticalAlignment="Top" Width="74" />
 
     </Grid>
 </Window>
