--- a/CameraEmguCV/MainWindow.xaml
+++ b/CameraEmguCV/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
-        fw:AcrylicWindow.Enabled="True" Height="650" Width="1540" Loaded="Window_Loaded" WindowStyle="None" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="NoResize">
+        fw:AcrylicWindow.Enabled="True" Height="650" FontSize="15" Width="1540" Loaded="Window_Loaded" WindowStyle="None" WindowStartupLocation="CenterScreen" Visibility="Visible" ResizeMode="NoResize">
     <Grid Height="650" VerticalAlignment="Top" Margin="0,0,-8,-21">
 
         <Grid.ColumnDefinitions>
@@ -17,11 +17,44 @@
         <Grid Grid.Column="0" fw:PointerTracker.Enabled="True" Background="#01FFFFFF">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button Foreground="Black" Background="{x:Null}" BorderBrush="{x:Null}">
+                    <Button Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}">
                         <materialDesign:PackIcon Kind="ArrowLeft"></materialDesign:PackIcon>
                     </Button>
                     <TextBlock Text="Menu" FontSize="12" Margin="10" VerticalAlignment="Center" />
                 </StackPanel>
+                <ListViewItem Padding="0">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Home" Margin="15"/>
+                        <TextBlock Text="Home" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </ListViewItem>
+                <TextBlock Text="Options"  Margin="15" FontWeight="DemiBold"/>
+                <ListView FontSize="15" >
+                    <ListViewItem Padding="1">
+                        <StackPanel Orientation="Horizontal" MouseDown="BtnShowImage_Click">
+                            <materialDesign:PackIcon Kind="Image" Margin="15" Foreground="White"/>
+                            <TextBlock Text="Show image" VerticalAlignment="Center" Foreground="White"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem x:Name="btn_AddMarkers" Padding="1" MouseDown="BtnAddMarkers_Click">
+                        <StackPanel Orientation="Horizontal" MouseDown="BtnAddMarkers_Click">
+                            <materialDesign:PackIcon Kind="ControlPoint" Margin="15" Foreground="White"/>
+                            <TextBlock Text="Add Markers" VerticalAlignment="Center" Foreground="White"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Padding="1">
+                        <StackPanel Orientation="Horizontal" MouseDown="btnDebugWindow_Click">
+                            <materialDesign:PackIcon Kind="Build" Margin="15" Foreground="White"/>
+                            <TextBlock Text="Debug Mode" VerticalAlignment="Center" Foreground="White"/>
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Padding="1">
+                        <StackPanel Orientation="Horizontal" MouseDown="BtnReset_Click">
+                            <materialDesign:PackIcon Kind="SettingsBackupRestore" Margin="15" Foreground="White"/>
+                            <TextBlock Text="Reset" VerticalAlignment="Center" Foreground="White"/>
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
 
             </StackPanel>
         </Grid>
@@ -53,13 +86,14 @@
         <Canvas Width="458" Name="secondaryCanvas" Margin="713,10,162,289" Grid.Column="1">
             <Image Name="image2" Stretch="Uniform" Width="458" Height="350" />
         </Canvas>
-        <Button Name="btnShowImage" Content="Show image" Margin="68,144,142,468" Click="BtnShowImage_Click" Background="LightGray" Height="Auto"/>
-        <Button Name="btnAddMarkers" Content="Add Markers" Margin="68,210,142,406" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
-        <Button Name="btnReset" Content="RESET!"  Margin="68,269,142,349"   Click="BtnReset_Click" Background="LightGray"/>
-        <Image HorizontalAlignment="Left" Height="122" Margin="44,479,0,0" VerticalAlignment="Top" Width="262" Name="image3" Grid.Column="1"/>
-        <ComboBox Name="cbxCameraDevices" HorizontalAlignment="Left" Margin="68,428,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged"/>
-        <Button x:Name="btnDebugWindow" Content="Debug Mode"  Margin="68,329,142,280"   Click="btnDebugWindow_Click" Background="LightGray" Height="Auto"/>
-        <Label Content="Template found: " HorizontalAlignment="Left" Margin="345,505,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,0.266" Grid.Column="1" Height="44"/>
-        <Label Name="lblFound" Content="" HorizontalAlignment="Left" Margin="470,505,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" Width="68" RenderTransformOrigin="0.529,0.654"/>
+        <!--<Button Name="btnShowImage" Content="Show image" Margin="97,576,961,36" Click="BtnShowImage_Click" Background="LightGray" Height="Auto" Grid.Column="1"/>
+        <Button Name="btnAddMarkers" Content="Add Markers" Margin="68,347,142,269" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
+        <Button Name="btnReset" Content="RESET!"  Margin="68,420,142,198"   Click="BtnReset_Click" Background="LightGray"/>-->
+        <Button Name="btnAddMarkers" Content="Add Markers" Margin="-267,578,477,38" Click="BtnAddMarkers_Click" Background="LightGray" Height="Auto"/>
+        <Image HorizontalAlignment="Left" Height="122" Margin="467,479,0,0" VerticalAlignment="Top" Width="262" Name="image3" Grid.Column="1"/>
+        <ComboBox Name="cbxCameraDevices"  HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Width="140" SelectionChanged="CbxCameraDevices_SelectionChanged"/>
+        <!--<Button x:Name="btnDebugWindow" Content="Debug Mode"  Margin="68,479,142,130"   Click="btnDebugWindow_Click" Background="LightGray" Height="Auto"/>-->
+        <Label Content="Template found: " HorizontalAlignment="Left" Margin="44,412,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,0.266" Grid.Column="1" Height="44"/>
+        <Label Name="lblFound" Content="" HorizontalAlignment="Left" Margin="188,412,0,0" VerticalAlignment="Top" Height="26" Grid.Column="1" Width="68" RenderTransformOrigin="0.529,0.654"/>
     </Grid>
 </Window>
